force-app/main/default/objects/Status_Label__c/Status_Label__c.object-meta.xml
<CustomObject>
    <description>Stores status labels associated with a profession, including default indicators and external PKIDs.</description>
    <label>Status Label</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>