force-app/main/default/objects/Status_Label__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this status label is the default for the related profession.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>