force-app/main/default/objects/Status_Label__c/fields/PKID__c.field-meta.xml
<CustomField>
    <fullName>PKID__c</fullName>
    <externalId>true</externalId>
    <label>PKID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>