force-app/main/default/objects/Status_Label__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profession</label>
    <referenceTo>Profession__c</referenceTo>
    <relationshipLabel>Status Labels</relationshipLabel>
    <relationshipName>Status_Labels</relationshipName>
    <type>Lookup</type>
</CustomField>